# DS_Project

./: .gitignore  CMakeLists.txt  PRESENTACION_ESTRUCTURAS.md  README.md  build.sh  fix_dfs.ps1  maze_app  run.sh
docs/: SFML_INSTALLATION.md  SFML_INSTALLATION.txt  manualDeUsuario.md  windows.md
include/: AStarSolver.h  AVLTree.h  AlgorithmRankingAVL.h  AlgorithmStats.h  ChallengeSystem.h  CollectorSolver.h  CoordHash.h  ExplorationHeatmap.h  GraphAnalysis.h  GreedySolver.h  Grid.h  LeaderboardUI.h  MazeSolver.h  Menu.h  Metrics.h  OriginShiftMaze.h  PortalSystem.h  RankingManager.h  RankingTree.h  UCSSolver.h
src/: AStarSolver.cpp  AlgorithmRankingAVL.cpp  CMakeCache.txt  ChallengeSystem.cpp  CollectorMazeGen.cpp  CollectorSolver.cpp  ExplorationHeatmap.cpp  GraphAnalysis.cpp  GreedySolver.cpp  Grid.cpp  HuntAndKillAlgorithm.cpp  KruskalsAlgorithm.cpp  LeaderboardUI.cpp  Makefile  MazeSolver.cpp  Menu.cpp  OriginShiftMaze.cpp  PortalSystem.cpp  RankingManager.cpp  RankingTree.cpp  Solve-DFS-attempt1.cpp  UCSSolver.cpp  cmake_install.cmake  main.cpp
src/old/: HuntAndKillAlgorithmAriel.cpp  HuntAndKillAlgorithmOld.cpp  KruskalsAlgorithmOld.cpp
